index.html changes made

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             </div>
         </div>
         <div class="main7 flex justify-center">
-            <h1 class="text-[#767676] text-[35px] font-[600] mt-[20px] mb-[20px]">Latest From The RØDE Blog</h1>
+            <h1 class="text-[#767676] text-[35px] font-[600] mt-[20px] mb-[20px] text-center">Latest From The RØDE Blog</h1>
         </div> 
         <div class="main8 bg-[#F8F9FA] pt-[50px] lg:flex lg:flex-row lg:pl-[12rem] lg:pr-[12rem] pb-[20px]">
             <div class="flex flex-col items-center lg:w-1/2 ">
